# UnoGame

./: .gitignore  CMakeLists.txt
include/: example_state.hpp  program.hpp  state_interface.hpp
src/: example_state.cpp  main.cpp  program.cpp  state_interface.cpp
